annoying overflow issue on nav fixed

--- a/src/app/styles/MobileNavMenu.module.css
+++ b/src/app/styles/MobileNavMenu.module.css
@@ -1,5 +1,5 @@
 .mobileMenu {
-  transition: transform ease-in-out 200ms;
+  transition: all ease-in-out 200ms;
 }
 
 .mobileMenu.open {
